# fairu

./: .gitignore  Cargo.toml
crates/fairu-entity/: Cargo.toml
crates/fairu-entity/src/: fairu.rs  lib.rs  prelude.rs
crates/fairu-frontend/: Cargo.toml  index.css  index.html  tailwind.config.js
crates/fairu-frontend/src/: app.rs
crates/fairu-frontend/src/components/: file_upload.rs  mod.rs  route_link.rs
crates/fairu-frontend/src/pages/: about.rs  get_file.rs  mod.rs  new_file.rs  page_not_found.rs
crates/fairu-migration/: Cargo.toml
crates/fairu-migration/src/: m20220101_000001_create_table.rs
