[package]
name = "fairu-frontend"
publish = false
edition = "2021"
version = { workspace = true }

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
wasm-bindgen = "0.2"
log = { version = "0.4.22", optional = true }
wasm-logger = { version = "0.2", optional = true }

[features]
log = ["dep:log", "dep:wasm-logger"]
