[package]
name = "fairu-frontend"
publish = false
edition = "2021"
version = { workspace = true }

[dependencies]
fairu-entity = { workspace = true }
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
wasm-bindgen = "0.2"
log = { version = "0.4.22", optional = true }
wasm-logger = { version = "0.2", optional = true }
serde = { version = "1.0.215", features = ["derive"] }
web-sys = { version = "0.3.60" }
indexmap = "2.6.0"
gloo-net = "0.6.0"
wasm-bindgen-futures = "0.4.47"

[features]
log = ["dep:log", "dep:wasm-logger"]
