[package]
name = "fairu-frontend"
publish = false
edition = "2021"
version = { workspace = true }

[dependencies]
fairu-entity = { workspace = true }
gloo-net = { version = "0.6.0", features = ["http", "json"] }
indexmap = "2.6.0"
log = { version = "0.4.22", optional = true }
serde = { version = "1.0.215", features = ["derive"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.47"
wasm-logger = { version = "0.2", optional = true }
web-sys = { version = "0.3.60" }
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"

[features]
log = ["dep:log", "dep:wasm-logger"]
